--- a/tsunagaru-kun/UI/BaseDevicesView.storyboard
+++ b/tsunagaru-kun/UI/BaseDevicesView.storyboard
@@ -1,7 +1,62 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Adddevice-->
+        <scene sceneID="j8V-L8-R54">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Adddevice" id="lMj-NC-O0Z" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="onN-bb-g6H"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aFf-pl-YbX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1616" y="-533"/>
+        </scene>
+        <!--Devicelist-->
+        <scene sceneID="N1q-PI-CMb">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Devicelist" id="djN-vE-5hW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="zPc-gk-sKP"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z47-Dk-xYe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1619" y="-446"/>
+        </scene>
+        <!--Generalsettings-->
+        <scene sceneID="87m-mp-bc9">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Generalsettings" id="dwZ-g9-XyL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="5bM-3j-Tbv"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jzd-7X-W5N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1590" y="-366"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ceh-Mb-b9m">
+            <objects>
+                <tabBarController id="CRR-DD-xVK" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ct4-qP-P65">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="djN-vE-5hW" kind="relationship" relationship="viewControllers" id="Fd8-XL-6ze"/>
+                        <segue destination="lMj-NC-O0Z" kind="relationship" relationship="viewControllers" id="16r-eI-g7C"/>
+                        <segue destination="dwZ-g9-XyL" kind="relationship" relationship="viewControllers" id="37y-nu-KB4"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SBK-rL-FgM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2350" y="-445"/>
+        </scene>
+    </scenes>
 </document>
