--- a/tsunagaru-kun/Views/BaseDevicesTabView.xib
+++ b/tsunagaru-kun/Views/BaseDevicesTabView.xib
@@ -1,18 +1,57 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-        </view>
+        <tabBarController id="mHH-Fh-UDq">
+            <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EdE-IN-osc">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            </tabBar>
+            <viewControllers>
+                <viewController id="3Ja-Xq-C05">
+                    <view key="view" contentMode="scaleToFill" id="vVI-VU-OWp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="CDF-JS-dHl"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="デバイスを追加" image="TabViewIcons-Wave" id="c9d-lU-EHL"/>
+                </viewController>
+                <viewController id="9Sd-A5-8bd">
+                    <view key="view" contentMode="scaleToFill" id="F0q-XA-SUU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ugB-ci-m8K"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="デバイスリスト" image="TabViewIcons-Archive" id="B2p-WV-d0H"/>
+                </viewController>
+                <viewController id="1zr-nn-d7F" userLabel="Item 2">
+                    <view key="view" contentMode="scaleToFill" id="sHY-Yd-AYf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="0zg-8C-tWM"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="設定" image="TabViewIcons-Settings" id="d6g-87-iXK"/>
+                </viewController>
+            </viewControllers>
+            <point key="canvasLocation" x="63" y="-1"/>
+        </tabBarController>
     </objects>
+    <resources>
+        <image name="TabViewIcons-Archive" width="32" height="32"/>
+        <image name="TabViewIcons-Settings" width="32" height="32"/>
+        <image name="TabViewIcons-Wave" width="32" height="32"/>
+    </resources>
 </document>
